Closed Bug 1780614 Opened 2 years ago Closed 2 years ago

Assertion failure: mDocuments[0]->CrossOriginIsolated() == aDocument->CrossOriginIsolated()

Categories

(Core :: DOM: Core & HTML, defect)

defect

Tracking

()

RESOLVED FIXED
105 Branch
Tracking Status
firefox105 --- fixed

People

(Reporter: jesup, Assigned: nika)

Details

Attachments

(1 file)

Found while trying to use Photoshop for the web (with OPFS patches).

https://pernos.co/debug/Vm9SvCfpdewPsCy5OuFkHw/index.html

Occasionally repeatable.

I looked into the pernsoco trace and I think I found the source of the issue. Will try to put up a patch for it soon.

Assignee: nobody → nika

This patch changes how BrowsingContextGroups track CrossOriginIsolated
status such that it should be more consistently tracked and easier to
assert in the places which depend on it. In the new state of the world,
a flag is stored within the BCG's ID which tracks whether it was
created for cross-origin isolated documents, and that is also checked
when making decisions about how to isolate initial about:blank
documents, and whether to allow certain changes to
CrossOriginOpenerPolicy.

This flag is stashed within the ID, as it needs to be preserved if the
BCG is destroyed and then re-created from the ID (which may be e.g.
round-tripped through JS code). I also considered making the ID be a
string instead, to make it easier to include extra information like
this, and more clear where the information is stored, however :kmag
generally preferred using a bit within the integer ID.

These new assertions should now be less likely to spuriously fail due to
a DocShell disappearing or similar as well, which should help fix the
original issue.

Severity: -- → S1
Priority: -- → P1

Is this really an S1 bug ((Catastrophic) Blocks development/testing, may impact more than 25% of users, causes data loss, likely dot release driver, and no workaround available)? If so, which releases are affected?

Flags: needinfo?(nika)

No, I meant S2. Sorry.

Severity: S1 → S2
Flags: needinfo?(nika)
Priority: P1 → --
Pushed by nlayzell@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/dfbea8237d76
Track potential crossoriginisolated status on BCG, r=smaug,kmag
Status: NEW → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 105 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: